[gd_scene load_steps=7 format=3 uid="uid://3js2ufvdnk2k"]

[ext_resource type="Script" path="res://scenes/scripts/ui/menu_central_page.gd" id="1_gad2b"]
[ext_resource type="PackedScene" uid="uid://c8sis2bmuopvk" path="res://scenes/ui/menu_bg.tscn" id="1_ijhm3"]
[ext_resource type="Theme" uid="uid://b1a5sjt2xibwo" path="res://assets/themes/strata_theme/strata_theme.tres" id="2_gri6b"]
[ext_resource type="Texture2D" uid="uid://b1gfbx416f357" path="res://assets/textures/static/github_icon_outline.png" id="3_hf2uu"]
[ext_resource type="Texture2D" uid="uid://choj350rc1swa" path="res://assets/textures/static/github_icon_filling.png" id="4_04cwg"]
[ext_resource type="BitMap" uid="uid://c3wks6bj3r8k3" path="res://assets/textures/static/github_icon.bmp" id="5_lbftm"]

[node name="CentralPage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 960.0
offset_bottom = 540.0
script = ExtResource("1_gad2b")

[node name="ItchioBGRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
color = Color(0.243137, 0.207843, 0.27451, 1)

[node name="MenuBG" parent="." instance=ExtResource("1_ijhm3")]
visible = false

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -144.0
offset_top = -240.0
offset_right = 144.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StartButton" type="Button" parent="ButtonsContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../../../../ConfigButton")
theme = ExtResource("2_gri6b")
text = "START"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme = ExtResource("2_gri6b")
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 235.0
grow_vertical = 0
theme = ExtResource("2_gri6b")

[node name="StrataLogo" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -291.5
offset_right = 291.5
offset_bottom = 199.0
grow_horizontal = 2
theme = ExtResource("2_gri6b")

[node name="StrataLogoText" type="Label" parent="StrataLogo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -183.0
offset_top = -65.0
offset_right = 183.0
offset_bottom = 65.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_gri6b")
theme_override_font_sizes/font_size = 120
text = "STRATA"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="OtherLinks" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -269.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="GitHubLink" type="TextureButton" parent="OtherLinks"]
layout_mode = 2
theme = ExtResource("2_gri6b")
texture_normal = ExtResource("3_hf2uu")
texture_pressed = ExtResource("3_hf2uu")
texture_hover = ExtResource("4_04cwg")
texture_click_mask = ExtResource("5_lbftm")
stretch_mode = 3

[connection signal="pressed" from="ButtonsContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OtherLinks/GitHubLink" to="." method="_on_git_hub_link_pressed"]
